# nsf-rl

./: .gitignore  README.md  pyproject.toml
docs/: compare_flow_vs_gt.md  conditional_nsf.md  generate_random_dmp_dataset.md  latent_nsf_pusht.md  train_nsf_affine_dmp.md
marimo/: dmp_explorer.py
scripts/: compare_flow_vs_gt.py  generate_random_dmp_dataset.py  generate_random_dmp_splits.sh  run_train_latent_nsf_pusht.sh  train_latent_nsf_pusht.py  train_nsf_affine_dmp.py  train_nsf_affine_dmp.sh  visualize_waypoint_predictions.py
src/nsf_rl/: __init__.py  cli.py  dmp.py  training.py
src/nsf_rl/data/: __init__.py  dataset.py  dmp_pairs.py  generate.py  observation.py  pusht_latent_dataset.py
src/nsf_rl/models/: bijectors.py  bridge_models.py  conditional_flow.py  decoders.py  distributions.py  encoders.py  latent_stochastic_flow.py  losses.py  stochastic_flows.py
src/nsf_rl/models/posteriors/: __init__.py  base.py  gru.py  mlp.py
src/nsf_rl/utils/: pymunk_compat.py
